fixed visibility of grow button

--- a/htdocs/css/nomenclador.css
+++ b/htdocs/css/nomenclador.css
@@ -301,4 +301,5 @@
     top:10px;
     font-size:15px;
     cursor:pointer;
+    z-index: 9999;
 }
